--- a/views/initialconf.jade
+++ b/views/initialconf.jade
@@ -6,7 +6,7 @@ block content
     .navbar
         .navbar-inner
             a.brand openNAS
-    .alert.alert-block.alert-info.span6.offset3
+    .alert.alert-block.alert-info.span6.offset3#idInfoBlock
         h4 Welcome to openNAS v #{appversion}
         p Simply press "Start" button to begin installation process!
         input(type = 'button', value = 'Press me!', style='padding:10px;margin:5px')#idBtnStartInstall.btn.btn-primary
